--- a/front-developers-games/src/index.scss
+++ b/front-developers-games/src/index.scss
@@ -1,3 +1,7 @@
+@import './assets/styles/styleConstants.scss';
+@import './assets/styles/mixins.scss';
+@import './assets/styles/globalStyles.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
