Add AppWrapper component

--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -1,11 +1,11 @@
-//colors
-$semiBlue: rgb(0, 120, 132);
+// colors
+$semiBlue: #008A8C;
 
 // font-family (los de debajo van a ir en función de éste)
 
 // font weight
 
-//line height
+// line height
 
 // letter spacing
 
@@ -21,18 +21,32 @@ $desktop-subtitle-20: 20px;
 $desktop-title-22: 22px;
 
 // padding
+$p-2: 2px;
 $p-4: 4px;
+$p-6: 6px;
 $p-8: 8px;
+$p-12: 12px;
 $p-16: 16px;
 $p-24: 24px;
 $p-32: 32px;
+$p-64: 64px;
 
 // margin
+$m-2: 2px;
 $m-4: 4px;
+$m-6: 6px;
 $m-8: 8px;
+$m-12: 12px;
 $m-16: 16px;
 $m-24: 24px;
 $m-32: 32px;
+$m-64: 64px;
 
 // border radius
 $rounded-button: 5px;
+
+// Media queries
+$query-1280: 1280px;
+
+// Max-width
+$desktop-max-width: 1280px;
