--- a/front-developers-games/src/assets/styles/mixins.scss
+++ b/front-developers-games/src/assets/styles/mixins.scss
@@ -2,15 +2,15 @@
 
 @mixin flex($flex-direction: row, $justify-content: center, $align-items: center) {
     display: flex;
-    justify-content: $justify;
+    justify-content: $justify-content;
   
-    @if $direction {
-      flex-direction: $direction;
+    @if $flex-direction {
+      flex-direction: $flex-direction;
     }
-    @if $align {
-      align-items: $align;
+    @if $align-items {
+      align-items: $align-items;
     }
-    @if not $align {
+    @if not $align-items {
       align-items: center;
     }
   }
