--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -1,4 +1,22 @@
 // Classes generals
-.prove-scss {
-    background-color: $semiBlue;
+@import './styleConstants.scss';
+@import './mixins.scss';
+
+.mobile {
+    display: flex;
 }
+
+.desktop {
+    display: none;
+}
+
+@media only screen and (min-width:1280px) {
+    .mobile {
+        display: none;
+    }
+    
+    .desktop {
+        display: flex;
+    }
+}
+
