--- a/front-developers-games/src/components/AppWrapper/AppWrapper.scss
+++ b/front-developers-games/src/components/AppWrapper/AppWrapper.scss
@@ -4,7 +4,8 @@
 .app-wrapper {
     @include flex($flex-direction: column);
 
-    height: 100%
+    // height: 100%;
+    flex: 1;
 }
 
 .app-wrapper__title {
