--- a/front-developers-games/src/index.scss
+++ b/front-developers-games/src/index.scss
@@ -52,7 +52,7 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'redhat-display';
+  font-family: $font-main;
   -webkit-print-color-adjust: exact;
 }
 
