--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -3,7 +3,30 @@
 @import '../../assets/styles/styleConstants.scss';
 
 .header {
-    @include flex();
+    @include flex($flex-direction:column);
+    width: 100%;
     height: 60px;
-    background-color: red;
+    
+}
+
+.header__menu {
+    @include flex($justify-content: space-between);
+    width: 100%;
+    height: 100%;
+    max-width: 992px;
+    padding: $p-16;
+}
+
+.menu__logo {
+    height: 100%;
+}
+
+.logo__image {
+    height: 100%;
+    cursor: pointer;
+}
+
+.menu__hamburger {
+    height: 100%;
+    cursor: pointer;
 }
