--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -1,8 +1,14 @@
 // colors
+$lighterBlue: #3EC4C6;
+$lightBlue: #00ACAF;
 $semiBlue: #008A8C;
+$darkBlue: #056C6E;
+$red: #FF0000;
+$gray: #9C9C9C;
 
 // font-family (los de debajo van a ir en función de éste)
-
+$font-main: 'redhat-display';
+$font-text: 'redhat-text';
 // font weight
 
 // line height
@@ -50,3 +56,6 @@ $query-1280: 1280px;
 
 // Max-width
 $desktop-max-width: 1280px;
+
+// box shadow
+$box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
