--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -6,15 +6,14 @@
     @include flex($flex-direction:column);
     width: 100%;
     height: 60px;
-    
 }
 
 .header__menu {
     @include flex($justify-content: space-between);
     width: 100%;
     height: 100%;
-    max-width: 992px;
-    padding: $p-16;
+    max-width: $desktop-max-width;
+    padding: $p-16 $p-32;
 }
 
 .menu__logo {
@@ -30,3 +29,95 @@
     height: 100%;
     cursor: pointer;
 }
+
+.screen-opacity-hidden {
+    width: 0vw;
+    height: 100vh;
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    transform: scaleX(0);
+    transition: all 0.5s ease;
+    transform-origin: 100% 50%;
+  }
+  
+  .screenOpacity {
+    width: 100vw;
+    position: fixed;
+    -ms-transform: scaleX(2); /* IE 9 */
+    transform: scaleX(1);
+  }
+  
+  .header__mobile-hidden {
+    @include flex($flex-direction: column);
+    position: absolute;
+    top: 0;
+    right: -60%;
+    bottom: 0;
+    width: 60%;
+    z-index: 3;
+    height: 100vh;
+    list-style: none;
+    color: white;
+    background-color: $semiBlue;
+    box-shadow: $box-shadow;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    -ms-transform: scaleX(0); /* IE 9 */
+    transform: scaleX(0);
+    overflow: hidden;
+    padding: 20px 32px;
+  }
+  
+  .showMenu {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    list-style: none;
+    transform: scaleX(1);
+    overflow: hidden;
+    padding: 20px 32px;
+  }
+
+  .mobile__close-menu {
+    position: absolute;
+    top: $p-16;
+    right: $p-32;
+    height: 33px;
+  }
+  
+  .menu__navigation {
+    @include flex($flex-direction: column);
+    height: 100%;
+    width: 100%;
+    max-height: 300px;
+    @media only screen and (min-width: $query-1280) {
+      @include flex($justify-content: space-evenly);
+      width: 50%;
+      max-height: unset;
+    }
+  }
+
+  .navigation__item {
+    @include flex($flex-direction: column);
+    position: relative;
+    list-style: none;
+    text-decoration: none;
+    cursor: pointer;
+    height: 100%;
+    color: white;
+    font-size: $text-16;
+    @media only screen and (min-width: $query-1280) {
+      color: $semiBlue;
+      &:hover {
+        color: $darkBlue;
+      }
+    }
+  }
+
+  .navigation__item--active {
+      color: $lighterBlue;
+  }
