Add MainButton component

--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -10,6 +10,11 @@ $gray: #9C9C9C;
 $font-main: 'redhat-display';
 $font-text: 'redhat-text';
 
+$text-normal: normal;
+$text-semibold: 550;
+$text-bold: bold;
+$text-bolder: 900;
+
 // font weight
 
 // line height
