--- a/front-developers-games/src/components/Input/Input.scss
+++ b/front-developers-games/src/components/Input/Input.scss
@@ -8,7 +8,7 @@
     border: 1px solid $semiBlue;
     width: 100%;
     height: 100%;
-    padding: $p-6 $p-12;
+    padding: 0 $p-12;
     font-family: $font-text;
     font-size: $text-14;
 }
