--- a/front-developers-games/src/index.scss
+++ b/front-developers-games/src/index.scss
@@ -36,6 +36,7 @@ html {
 body {
   height: 100%;
   margin: 0;
+  font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'redhat-text','Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
