--- a/front-developers-games/src/components/Input/Input.scss
+++ b/front-developers-games/src/components/Input/Input.scss
@@ -11,16 +11,16 @@
     padding: 0 $p-12;
     font-family: $font-text;
     font-size: $text-14;
+
+    &:focus {
+        border: 1px solid $lightBlue;
+    }
+    &::placeholder {
+        color: $gray;
+    }
 }
 
-.input__field:focus {
-    border: 1px solid $lightBlue;
-}
 
 .input__field--incorrect {
     border: 1px solid $red;
-}
-
-.input__field::placeholder {
-    color: $gray;
 }
