--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -5,13 +5,12 @@
 .header {
     @include flex($flex-direction:column);
     width: 100%;
-    height: 60px;
-}
-
-.header__menu {
+  }
+  
+  .header__menu {
     @include flex($justify-content: space-between);
+    height: 60px;
     width: 100%;
-    height: 100%;
     max-width: $desktop-max-width;
     padding: $p-16 $p-24;
 }
@@ -122,10 +121,26 @@
       color: $lighterBlue;
   }
 
-  .header__banner {
+  .header__banner--big {
+      background-image: url('../../assets/images/home-big-banner.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
       width: 100%;
       height: 200px;
       @media only screen and (min-width: $query-1280) {
         height: 300px;
       }
   }
+
+  .header__banner--small {
+    background-image: url('../../assets/images/home-small-banner.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100px;
+    @media only screen and (min-width: $query-1280) {
+      height: 150px;
+    }
+}
