--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -10,7 +10,7 @@
     display: none;
 }
 
-@media only screen and (min-width:1280px) {
+@media only screen and (min-width:$query-1280) {
     .mobile {
         display: none;
     }
