Add style to register

--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -1,8 +1,8 @@
 // colors
 $lighterBlue: #3EC4C6;
-$lightBlue: #00ACAF;
+$lightBlue: #00ADAF;
 $semiBlue: #008A8C;
-$darkBlue: #056C6E;
+$darkBlue: #006869;
 $red: #FF0000;
 $gray: #9C9C9C;
 
