--- a/front-developers-games/src/components/Input/Input.scss
+++ b/front-developers-games/src/components/Input/Input.scss
@@ -5,7 +5,7 @@
     border-radius: $border-radius;
     background: none;
     outline: none;
-    border: 1px solid $semiBlue;
+    border: 1px solid $lightBlue;
     width: 100%;
     height: 100%;
     padding: 0 $p-12;
