Add challengeCard component

--- a/front-developers-games/src/components/MainButton/MainButton.scss
+++ b/front-developers-games/src/components/MainButton/MainButton.scss
@@ -19,6 +19,11 @@
     }
 }
 
+.main-button a {
+    color: white;
+    text-decoration: none;
+}
+
 .main-button--big {
     padding: $p-8 $p-12;
     font-size: $text-16;
