--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -6,6 +6,8 @@ $darkBlue: #056C6E;
 $red: #FF0000;
 $gray: #9C9C9C;
 
+$lighterBlue-transparent: rgba(62, 196, 198, 0.05);
+
 // font-family (los de debajo van a ir en función de éste)
 $font-main: 'redhat-display';
 $font-text: 'redhat-text';
@@ -22,8 +24,11 @@ $text-bolder: 900;
 // letter spacing
 
 // font sizes
-$text-16: 16px;
 $text-14: 14px;
+$text-16: 16px;
+$text-20: 20px;
+$text-24: 24px;
+$text-32: 32px;
 $error-text-12:12px;
 
 $mobile-subtitle-18: 18px;
