--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -7,6 +7,7 @@ $red: #FF0000;
 $gray: #9C9C9C;
 
 $lighterBlue-transparent: rgba(62, 196, 198, 0.05);
+$blue-completed: #99DDDD;
 
 // font-family (los de debajo van a ir en función de éste)
 $font-main: 'redhat-display';
@@ -29,6 +30,8 @@ $text-16: 16px;
 $text-20: 20px;
 $text-24: 24px;
 $text-32: 32px;
+$text-38: 38px;
+$text-42: 42px;
 $error-text-12:12px;
 
 $mobile-subtitle-18: 18px;
