--- a/front-developers-games/src/views/Challenges/Challenges.scss
+++ b/front-developers-games/src/views/Challenges/Challenges.scss
@@ -3,5 +3,27 @@
 @import '../../assets/styles/styleConstants.scss';
 
 .challenges {
-    @include flex($flex-direction:column, $align-items:center)
+    @include flex($flex-direction:column, $align-items:center);
+    width: 100%;
+    padding: $p-4;
+}
+
+.challenges__text{
+    color: $darkBlue;
+    font-weight: $text-semibold;
+    text-align: center;
+    margin-bottom: 12px;
+}
+
+
+.challenges__challenge-list {
+    @include flex($flex-direction:column, $align-items:center);
+
+    width: 100%;
+
+    @media only screen and (min-width: $query-1280){
+        @include flex($flex-direction:row, $align-items:center, $justify-content: space-between);
+        flex-wrap: wrap;
+        max-width: 980px;
+    }
 }
