--- a/front-developers-games/src/views/Challenges/Challenges.scss
+++ b/front-developers-games/src/views/Challenges/Challenges.scss
@@ -15,6 +15,10 @@
     margin-bottom: 12px;
 }
 
+.challenges__loading {
+    @include flex();
+    width: 100%;
+}
 
 .challenges__challenge-list {
     @include flex($flex-direction:column, $align-items:center);
