Finish error component

--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -4,6 +4,7 @@ $lightBlue: #00ACAF;
 $semiBlue: #008A8C;
 $darkBlue: #056C6E;
 $red: #FF0000;
+$lightRed: #b94242;
 $gray: #9C9C9C;
 
 $lighterBlue-transparent: rgba(62, 196, 198, 0.05);
