--- a/front-developers-games/src/components/LoadingError/LoadingError.scss
+++ b/front-developers-games/src/components/LoadingError/LoadingError.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin: 12px 0;
     @media only screen and(min-width:$query-1280) {
         flex-direction: row;
         align-items: center;
@@ -22,6 +22,6 @@
 }
 
 .loading-error__text{
-    color: $darkBlue;
+    color: $lightRed;
     font-size: $text-24;
 }
