--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -5,14 +5,24 @@
 .header {
     @include flex($flex-direction:column);
     width: 100%;
+    margin-top: 60px;
   }
   
   .header__menu {
     @include flex($justify-content: space-between);
     height: 60px;
     width: 100%;
-    max-width: $desktop-max-width;
     padding: $p-16 $p-24;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 0.5px solid $lightBlue;
+    @media only screen and (min-width: $query-1280) {
+      padding: $p-16 $p-48;
+
+    }
 }
 
 .menu__logo {
