--- a/front-developers-games/src/components/AppWrapper/AppWrapper.scss
+++ b/front-developers-games/src/components/AppWrapper/AppWrapper.scss
@@ -29,7 +29,11 @@
 
     flex: 1;
     width: 100%;
-    padding: $p-6;
+    padding: $p-12;
+    @media only screen and (min-width: $query-1280){
+        max-width: $desktop-max-width;
+        padding: $p-24;
+    }
 
 }
 
