--- a/front-developers-games/src/assets/styles/styleConstants.scss
+++ b/front-developers-games/src/assets/styles/styleConstants.scss
@@ -55,14 +55,18 @@ $p-48: 48px;
 $p-64: 64px;
 
 // margin
+$m-1: 1px;
 $m-2: 2px;
 $m-4: 4px;
 $m-6: 6px;
 $m-8: 8px;
 $m-12: 12px;
 $m-16: 16px;
+$m-18: 18px;
 $m-24: 24px;
 $m-32: 32px;
+$m-42: 42px;
+$m-48: 48px;
 $m-64: 64px;
 
 // border radius
