--- a/front-developers-games/src/components/Header/Header.scss
+++ b/front-developers-games/src/components/Header/Header.scss
@@ -12,6 +12,7 @@
     @include flex($justify-content: space-between);
     height: 60px;
     width: 100%;
+    max-width: 100vw;
     padding: $p-16 $p-24;
     position: fixed;
     background-color: white;
