Add extra participants & challenges. WIP: team_challenges insert challengeName in model

--- a/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
+++ b/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
@@ -141,23 +141,97 @@
     max-height: 0px;
     transform: scaleY(0);
     transform-origin: top;
-    transition: all 0.5s ease;
+    transition: all 0.7s;
 }
 
 .team-card__extra--visible {
     @include flex($flex-direction: column);
     max-height: 900px;
     transform: scaleY(1);
-    
 }
 
 .extra__members {
     @include flex($flex-direction: column);
     width: 100%;
     border-bottom: 1px solid $lighterBlue;
+    padding-bottom: $p-12;
+
+    @media only screen and(min-width: $query-1280){
+        align-items: flex-start;
+    }
+}
+
+.members__title {
+    color: $darkBlue;
+    margin: $m-6;
+
+    @media only screen and(min-width: $query-1280){
+        margin: $m-12;
+    }
+}
+
+.members__member-list {
+    @include flex($flex-direction: column, $align-items: flex-start);
+    width: 100%;
+}
+
+.member-list__member {
+    @include flex($justify-content: space-around);
+
+    width: 100%;
+    padding: $p-6 $p-16;
+
+    @media only screen and(min-width: $query-1280){
+        justify-content: flex-start;
+        padding: $p-8 $p-16;
+    }
+}
+
+.member__info {
+    @include flex($justify-content: space-around);
+    width: 100%;
+
+    @media only screen and(min-width: $query-1280){
+        width: 85%;
+        justify-content: flex-start
+    }
+}
+
+.member__name {
+    @media only screen and(min-width: $query-1280){
+        width: 30%;
+    } 
+}
+
+.member__email {
+    @media only screen and(min-width: $query-1280){
+        width: 40%;
+    } 
+}
+
+.member__phone {
+    @media only screen and(min-width: $query-1280){
+        width: 30%;
+    } 
 }
 
 .extra__challenges {
     @include flex($flex-direction: column);
     width: 100%;
+    margin-top: $m-6;
+
+    @media only screen and(min-width: $query-1280){
+        align-items: flex-start;
+    } 
+}
+
+
+
+
+
+
+
+
+.dark-background {
+    background: lightgray;
 }
