--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -10,6 +10,39 @@
     display: none;
 }
 
+.app__title {
+    color: $darkBlue;
+    font-size: $mobile-subtitle-18;
+    padding:$p-16 0px $p-12 0px;
+    text-align: center;
+    @media only screen and (min-width:$query-1280) {
+        padding: $p-24 0px;
+        font-size: $desktop-subtitle-20;
+    }
+}
+
+// form styles
+.form__warningMessage {
+    color: $red;
+    text-align: center;
+    padding: $p-12;
+    height: 50px;
+}
+
+.form__button {
+    padding-top: $m-12;
+    min-width: 120px;
+}
+
+.form__input {
+    // tasa de conversión 21
+    width: 100%;
+    height: 24px;
+    @media only screen and (min-width:$query-1280) {
+        height:  35px;
+    }
+}
+
 @media only screen and (min-width:$query-1280) {
     .mobile {
         display: none;
