--- a/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
+++ b/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
@@ -14,10 +14,6 @@
     }
 }
 
-// .cosoVis {
-//     max-height: 1000px;
-// }
-
 .team-card__info {
     @include flex($justify-content: flex-start);
     width: 100%;
@@ -139,15 +135,18 @@
     padding: $p-6 0;
     width: 100%;
     max-height: 0px;
-    transform: scaleY(0);
+    opacity: 0;
     transform-origin: top;
-    transition: all 0.7s;
+    transition: max-height 0.7s, opacity 0.4s;
+    display: block;
+
 }
 
 .team-card__extra--visible {
     @include flex($flex-direction: column);
     max-height: 900px;
-    transform: scaleY(1);
+    opacity: 1;
+
 }
 
 .extra__members {
@@ -238,12 +237,20 @@
 }
 
 .link__img {
+    cursor: pointer;
     height: 25px;
     width: 25px;
+    transition: all 0.3s;
+
+    &:hover {
+        transform: scale(1.2);
+    }
 }
-
-
 
 .dark-background {
     background: lightgray;
+}
+
+.display-none {
+    display: none;
 }
