--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -43,6 +43,35 @@
     }
 }
 
+// profile styles
+.view-profile {
+    @include flex($flex-direction: column);
+    width: 100%;
+    max-width: 1024px;
+}
+
+.view-profile__top {
+    @include flex($justify-content: space-between);
+
+    width: 80%;
+    margin-bottom: $m-12;
+    padding: $p-2;
+
+    @media only screen and(min-width: $query-1280){
+        width: 100%;
+     }
+}
+
+.top__text {
+    font-weight: $text-bold;
+    color: $darkBlue
+}
+
+.profile-button-container {
+    width: 135px;
+}
+
+
 @media only screen and (min-width:$query-1280) {
     .mobile {
         display: none;
