--- a/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
@@ -11,3 +11,46 @@
 .button-children__image {
     height: 20px;
 }
+
+.team-profile__login-info--admin {
+    @include flex($flex-direction: column);
+
+    border: 1px solid $semiBlue;
+    padding: $p-12;
+    width: 80%;
+
+    @media only screen and(min-width: $query-1280){
+        padding: $p-24;
+        width: 100%;
+
+    }
+}
+
+.login-info__general{
+    @include flex($flex-direction: column);
+    width: 80%;
+    @media only screen and(min-width: $query-1280){
+        @include flex($flex-direction: row);
+        width: 100%;
+    }
+}
+
+.profile {
+    @media only screen and(min-width: $query-1280){
+        padding-top: $p-16;
+        margin-bottom: unset !important;
+    }
+}
+
+.last-entry {
+    margin-bottom: unset !important;
+}
+
+.m-12{
+    margin-bottom: $m-12;
+    @media only screen and(min-width: $query-1280){
+        margin-bottom: unset;
+    }
+}
+
+
