--- a/front-developers-games/src/components/Input/Input.scss
+++ b/front-developers-games/src/components/Input/Input.scss
@@ -25,6 +25,10 @@
     border: 1px solid $red;
 }
 
+.input__field--disabled {
+    border: 1px solid $gray;
+}
+
 .blue-text {
     color: $semiBlue;
     font-weight: $text-bold;
