--- a/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
+++ b/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
@@ -2,68 +2,9 @@
 @import '../../../../assets/styles/mixins.scss';
 @import '../../../../assets/styles/styleConstants.scss';
 
-.register__participant {
-    @include flex($flex-direction: column);
-    width: 100%;
+
+.register__participant-border {
     border: 1px solid $darkBlue;
     margin: $m-12;
     padding: $p-12;
-}
-
-.participant__inputs {
-    width: 100%;
-}
-
-.inputs__entries {
-    width: 100%;
-    @media only screen and (min-width:$query-1280) {
-        @include flex();
-        margin-bottom: $m-16;
-    }
-}
-
-.entries__name {
-    width: 100%;
-    height: 24px;
-    margin-bottom: $m-16;
-    @media only screen and (min-width:$query-1280) {
-        width: 40%;
-        height:35px;
-        margin-bottom: unset;
-        padding-right: $p-8;
-    }
-}
-
-.entries__surname {
-    width: 100%;
-    height: 24px;
-    margin-bottom: $m-16;
-    @media only screen and (min-width:$query-1280) {
-        width: 60%;
-        margin-bottom: unset;
-        height:  35px;
-    }
-}
-
-.entries__mail {
-    width: 100%;
-    height: 24px;
-    margin-bottom: $m-16;
-    @media only screen and (min-width:$query-1280) {
-        width: 65%;
-        height:  35px;
-        margin-bottom: unset;
-        padding-right: $p-8;
-    }
-}
-
-.entries__number {
-    width: 100%;
-    height: 24px;
-    margin-bottom: $m-12;
-    @media only screen and (min-width:$query-1280) {
-        width: 35%;
-        margin-bottom: unset;
-        height:  35px;
-    }
 }
