--- a/front-developers-games/src/views/EditProfile/components/TeamProfile/TeamProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/TeamProfile/TeamProfile.scss
@@ -18,7 +18,6 @@
     }
 }
 
-
 .login-info__avatar {
     width: 70px;
     height: 70px;
@@ -120,4 +119,23 @@
 .team-profile__members {
     @include flex($flex-direction:column);
     width: 100%;
+}
+
+.top__actions {
+    @include flex($flex-direction: column);
+
+    @media only screen and(min-width: $query-1280){
+        flex-direction: row;
+    }
+
+}
+
+.profile-button-container--margin {
+    margin-bottom: $m-6;
+
+    @media only screen and(min-width: $query-1280){
+        margin-right: $m-24 ;
+        margin-bottom: 0;
+
+    }
 }
