--- a/front-developers-games/src/assets/styles/globalStyles.scss
+++ b/front-developers-games/src/assets/styles/globalStyles.scss
@@ -21,7 +21,7 @@
     }
 }
 
-.m-12--mobile{
+.mb-12--mobile{
     margin-bottom: $m-12;
     @media only screen and(min-width: $query-1280){
         margin-bottom: unset;
