Admin profile change avatar functionality

--- a/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
@@ -5,6 +5,10 @@
 @import '../../../Register/Register.scss';
 
 
+.info__avatar-file {
+    display: none;
+}
+
 .button-children__image {
     height: 20px;
     margin-right: $m-6;
