--- a/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
@@ -65,4 +65,8 @@
     text-decoration: none;
 }
 
+.bottom__secondary--buttons {
+    @include flex($flex-direction:column, $align-items:flex-start);
+}
+
 
