Add getCompletedChallenges route & fix team view challenges display

--- a/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
+++ b/front-developers-games/src/views/Teams/components/TeamCard/TeamCard.scss
@@ -205,6 +205,18 @@
     }
 }
 
+.member-list__member--challenge {
+    @include flex($justify-content: space-around);
+
+    width: 100%;
+    padding: $p-6 $p-16;
+
+    @media only screen and(min-width: $query-1280){
+        justify-content: space-between;
+        padding: $p-8 $p-16;
+    }
+}
+
 .member__info {
     @include flex($justify-content: space-around);
     width: 100%;
