Validate modal form

--- a/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
+++ b/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
@@ -33,6 +33,14 @@
     transition: all .4s ease-in-out;
 }
 
+.hide-top {
+    transform: translate3d(0, -500%, 0);
+}
+
+.hide-bottom {
+    transform: translate3d(-0, 500%, 0);
+}
+
 .form__input--modal {
     width: 80%;
     margin-bottom: 12px;
