--- a/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
+++ b/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
@@ -13,8 +13,12 @@
     z-index: 2;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 .add-participant__form{
-    transform: translate3d(0, -43%, 0);
+    transform: translate3d(0, -70%, 0);
     z-index: 3;
     display: flex;
     flex-direction: column;
@@ -33,12 +37,9 @@
     transition: all .4s ease-in-out;
 }
 
-.hide-top {
-    transform: translate3d(0, -500%, 0);
-}
-
 .hide-bottom {
-    transform: translate3d(-0, 500%, 0);
+    transform: translate3d(-0, 102%, 0);
+    transition: all .4s ease;
 }
 
 .form__input--modal {
