--- a/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
+++ b/front-developers-games/src/views/EditProfile/components/AdminProfile/AdminProfile.scss
@@ -66,7 +66,11 @@
 }
 
 .bottom__secondary--buttons {
-    @include flex($flex-direction:column, $align-items:flex-start);
+    @include flex($flex-direction:column, $align-items:center);
+
+    @media only screen and(min-width: $query-1280){
+        align-items: flex-start
+     }
 }
 
 
