--- a/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
+++ b/front-developers-games/src/components/CreateParticipantModal/CreateParticipantModal.scss
@@ -17,8 +17,14 @@
     visibility: hidden;
 }
 
+.modal__add-participant {
+    position: fixed;
+    width: 100%;
+    top: 30%;
+}
+
 .add-participant__form{
-    transform: translate3d(0, -70%, 0);
+    transform: translate3d(0, 0%, 0);
     z-index: 3;
     display: flex;
     flex-direction: column;
@@ -38,7 +44,7 @@
 }
 
 .hide-bottom {
-    transform: translate3d(-0, 102%, 0);
+    transform: translate3d(-0, 200%, 0);
     transition: all .4s ease;
 }
 
