--- a/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
+++ b/front-developers-games/src/views/EditProfile/components/TeamProfileParticipant/TeamProfileParticipant.scss
@@ -20,6 +20,7 @@
 .participant__title-container {
     @include flex($justify-content: space-between);
     width: 100%;
+    margin-bottom: $m-4;
 }
 
 .app__title--noPadding {
